--- a/Python_latex_workflow.ipynb
+++ b/Python_latex_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnkThiORMs7ThMhhcTJGFS",
+      "authorship_tag": "ABX9TyNOSsP/A3O58NmFYM6h7gFa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "\n",
         "peter.gruber@usi.ch, 2025-04\n",
         "\n",
-        "* Sample code for research worklfow with Python\n",
+        "* Sample code for research workflow with Python\n",
         "  * Create a PDF image\n",
         "  * Create a table of all regression results\n",
         "  * Create a table of selected regression results"
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "6McfxjgXERiG"
       },
@@ -64,28 +64,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Create the scatterplot\n",
-        "plt.figure(figsize=(8, 6))  # Adjust figure size as needed\n",
-        "plt.scatter(grade['stat'], grade['math'])\n",
-        "plt.xlabel('Grade in Statistics')\n",
-        "plt.ylabel('Grade in Math')\n",
-        "plt.title('Scatterplot of Math Grade vs. Statistics Grade')\n",
-        "plt.grid(True)\n",
-        "\n",
-        "# Save the plot as a PDF\n",
-        "plt.savefig('math_vs_stat_scatterplot.pdf')\n"
-      ],
-      "metadata": {
-        "id": "wzAYrriME9ZF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Table of everything\n",
         "from statsmodels.iolib.summary2 import summary_col\n",
         "\n",
@@ -99,7 +77,7 @@
       "metadata": {
         "id": "uPJVgo5WFJYk"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +109,29 @@
       "metadata": {
         "id": "n0ojU3mtFz1e"
       },
-      "execution_count": 10,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Create the scatterplot\n",
+        "plt.figure(figsize=(8, 6))  # Adjust figure size as needed\n",
+        "plt.scatter(grade['stat'], grade['math'])\n",
+        "plt.xlabel('Grade in Statistics')\n",
+        "plt.ylabel('Grade in Math')\n",
+        "plt.title('Scatterplot of Math Grade vs. Statistics Grade')\n",
+        "plt.grid(True)\n",
+        "\n",
+        "# Save the plot as a PDF\n",
+        "plt.savefig('math_vs_stat_scatterplot.pdf')"
+      ],
+      "metadata": {
+        "id": "ey9IIJqv6KAj"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
