--- a/Python_latex_workflow.ipynb
+++ b/Python_latex_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOSsP/A3O58NmFYM6h7gFa",
+      "authorship_tag": "ABX9TyPoHiMeKk/jwJTdvXqoQ/Kn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,10 @@
         "\n",
         "peter.gruber@usi.ch, 2025-04\n",
         "\n",
-        "* Sample code for research workflow with Python\n",
-        "  * Create a PDF image\n",
+        "* Sample code for research worklfow with Python\n",
         "  * Create a table of all regression results\n",
-        "  * Create a table of selected regression results"
+        "  * Create a table of selected regression results\n",
+        "  * Create a PDF image"
       ],
       "metadata": {
         "id": "6BjwN51iEWdT"
@@ -60,6 +60,28 @@
         "# Run regression\n",
         "model = smf.ols(formula='math ~ stat + isMale + isCity', data=grade).fit()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Create the scatterplot\n",
+        "plt.figure(figsize=(8, 6))  # Adjust figure size as needed\n",
+        "plt.scatter(grade['stat'], grade['math'])\n",
+        "plt.xlabel('Grade in Statistics')\n",
+        "plt.ylabel('Grade in Math')\n",
+        "plt.title('Scatterplot of Math Grade vs. Statistics Grade')\n",
+        "plt.grid(True)\n",
+        "\n",
+        "# Save the plot as a PDF\n",
+        "plt.savefig('math_vs_stat_scatterplot.pdf')\n"
+      ],
+      "metadata": {
+        "id": "wzAYrriME9ZF"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -108,28 +130,6 @@
       ],
       "metadata": {
         "id": "n0ojU3mtFz1e"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Create the scatterplot\n",
-        "plt.figure(figsize=(8, 6))  # Adjust figure size as needed\n",
-        "plt.scatter(grade['stat'], grade['math'])\n",
-        "plt.xlabel('Grade in Statistics')\n",
-        "plt.ylabel('Grade in Math')\n",
-        "plt.title('Scatterplot of Math Grade vs. Statistics Grade')\n",
-        "plt.grid(True)\n",
-        "\n",
-        "# Save the plot as a PDF\n",
-        "plt.savefig('math_vs_stat_scatterplot.pdf')"
-      ],
-      "metadata": {
-        "id": "ey9IIJqv6KAj"
       },
       "execution_count": null,
       "outputs": []
